# food_menu_app

./: README.md  db.sqlite3  pyproject.toml
food/: models.py  urls.py  views.py
food/migrations/: 0001_initial.py  0002_item_item_image.py  0003_item_user_name.py
food/templates/food/: base.html  detail.html  index.html  item_delete.html  item_form.html
food_menu_app/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  signals.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_image.py
users/templates/users/: login.html  profile.html  register.html
